<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemReset"
        android:title="@string/reset" />
    <item
        android:id="@+id/itemSelectLevel"
        android:title="@string/selectLevel" >
        <menu >
            <group
                android:checkableBehavior="single"
                android:enabled="true">
                <item
                    android:id="@+id/item1"
                    android:checked="true"
                    android:title="@string/초급" />
                <item
                    android:id="@+id/item2"
                    android:title="@string/중급" />
                <item
                    android:id="@+id/item3"
                    android:title="@string/고급" />
                <item
                    android:id="@+id/item4"
                    android:title="@string/최고급" />
            </group>
        </menu>
    </item>
</menu>